release/1.19.1/VERSION.md
# 1.19.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.19.1```   |
| Release Time   | ```2022-07-27T09:25:33+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.19```   |
| sha1   | ```a9c8b05a8082a65678beda6dfa2b8f21fa627bce```   |
| size   | ```385608```   |
| total size  | ```557023211```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/a9c8b05a8082a65678beda6dfa2b8f21fa627bce/1.19.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```90d438c3e432add8848a9f9f368ce5a52f6bc4a7```   |
| size   | ```21643604```   |
| url       | ```https://piston-data.mojang.com/v1/objects/90d438c3e432add8848a9f9f368ce5a52f6bc4a7/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```8399e1211e95faa421c1507b322dbeae86d604df```   |
| size   | ```45609936```   |
| url       | ```https://piston-data.mojang.com/v1/objects/8399e1211e95faa421c1507b322dbeae86d604df/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```java-runtime-gamma```   |
| version   | ```17```   |