release/1.19.2/VERSION.md
# 1.19.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.19.2```   |
| Release Time   | ```2022-08-05T11:57:05+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.19```   |
| sha1   | ```a9c8b05a8082a65678beda6dfa2b8f21fa627bce```   |
| size   | ```385608```   |
| total size  | ```557023211```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/a9c8b05a8082a65678beda6dfa2b8f21fa627bce/1.19.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```055b30d860ead928cba3849ba920c88b6950b654```   |
| size   | ```21644740```   |
| url       | ```https://piston-data.mojang.com/v1/objects/055b30d860ead928cba3849ba920c88b6950b654/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```f69c284232d7c7580bd89a5a4931c3581eae1378```   |
| size   | ```45609512```   |
| url       | ```https://piston-data.mojang.com/v1/objects/f69c284232d7c7580bd89a5a4931c3581eae1378/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```java-runtime-gamma```   |
| version   | ```17```   |